# quant

./: .gitignore  README.md  pyproject.toml
configs/: relative_strength_presets.toml
docs/: beginner-workflow.md  quant-single-vs-multi-asset.md
src/quant_binance_sync/: archive.py  backtest.py  checkpoints.py  cli.py  client.py  features.py  models.py  normalize_existing.py  normalizer.py  rate_limit.py  relative_strength.py  relative_strength_presets.py  signals.py  storage.py  stream.py  symbols.py  sync.py
tests/: test_archive.py  test_checkpoints.py  test_cli_stream.py  test_features.py  test_models.py  test_normalize_existing.py  test_normalizer.py  test_rate_limit.py  test_relative_strength.py  test_relative_strength_presets.py  test_signals_backtest.py  test_storage.py  test_stream.py  test_symbols.py  test_sync.py
